data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2452.wast
;; 3. **Test Description**: Construct a block with a deeply nested branching structure that includes a mix of conditional branches (`br_if`) and unconditional branches (`br`). Improperly reset context in WebAssembly might lead to incorrect execution paths.    - **Constraint Checked**: Proper conditional and unconditional branching within nested structures.    - **Relation to CFG**: Mismanagement in reset state leads to incorrect CFG branches.

(assert_invalid
  (module (func $nested-branch-incorrect-execution-path
    (block (result i32)
      (block (br_if 1 (i32.const 0)))
      (block 
        (block 
          (br 2)
        )
        (i32.const 1)
      )
    )
  ))
  "type mismatch"
)